<resources>
    <string name="app_name">Bank App</string>

    <string name="loginError">Usuário ou Senha inválidos</string>
    <string name="loginSuccess">Logado com sucesso</string>

    <string name="labelTitle">Titulo</string>
    <string name="labelRecents">Recentes</string>
    <string name="labelNameUser">Nome do Usuario</string>
    <string name="labelAccount">Conta</string>
    <string name="labelDescription">Conta Exemplo</string>
    <string name="labelDate">12/12/2018</string>
    <string name="labelNumAccount">0000 / 00.000000-0</string>
    <string name="labelBalance">Saldo</string>
    <string name="labelNumBalance">R$0.000,00</string>
    <string name="labelLoginError">Erro ao efetuar Login</string>
    <string name="buttonLoginLabel">Login</string>
</resources>